@@ -12,6 +12,9 @@
    - markus@cvs.openbsd.org 2001/10/06 00:14:50
      [sshconnect.c]
      remove unused argument
+   - markus@cvs.openbsd.org 2001/10/06 00:36:42
+     [session.c]
+     fix typo in error message, sync with do_exec_nopty
 
 20011007
  - (bal) ssh-copy-id corrected permissions for .ssh/ and authorized_keys.
@@ -6657,4 +6660,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1588 2001/10/10 05:02:03 djm Exp $
+$Id: ChangeLog,v 1.1589 2001/10/10 05:02:46 djm Exp $
